--- a/Retail_Sales_Predication_ML_project_.ipynb
+++ b/Retail_Sales_Predication_ML_project_.ipynb
@@ -6,30 +6,6 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [
-        "O_i_v8NEhb9l",
-        "HhfV-JJviCcP",
-        "Y3lxredqlCYt",
-        "3RnN4peoiCZX",
-        "x71ZqKXriCWQ",
-        "7hBIi_osiCS2",
-        "JlHwYmJAmNHm",
-        "35m5QtbWiB9F",
-        "PoPl-ycgm1ru",
-        "H0kj-8xxnORC",
-        "nA9Y7ga8ng1Z",
-        "PBTbrJXOngz2",
-        "u3PMJOP6ngxN",
-        "dauF4eBmngu3",
-        "bKJF3rekwFvQ",
-        "MSa1f5Uengrz",
-        "GF8Ens_Soomf",
-        "0wOQAZs5pc--",
-        "K5QZ13OEpz2H",
-        "lQ7QKXXCp7Bj",
-        "448CDAPjqfQr",
-        "KSlN3yHqYklG",
-        "t6dVpIINYklI",
-        "ijmpgYnKYklI",
         "-JiQyfWJYklI",
         "EM7whBJCYoAo",
         "fge-S5ZAYoAp",
@@ -162,6 +138,7 @@
         "gCX9965dhzqZ",
         "gIfDvo9L0UH2"
       ],
+      "cell_execution_strategy": "setup",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -387,7 +364,39 @@
     {
       "cell_type": "code",
       "source": [
-        "# Import Libraries"
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import seaborn as sns\n",
+        "from datetime import datetime\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "from scipy.stats.mstats import winsorize\n",
+        "from sklearn.preprocessing import LabelEncoder\n",
+        "import re\n",
+        "import nltk\n",
+        "from nltk.corpus import stopwords\n",
+        "from nltk.tokenize import word_tokenize\n",
+        "from statsmodels.stats.outliers_influence import variance_inflation_factor\n",
+        "from sklearn.metrics import mean_squared_error as mse\n",
+        "from sklearn.metrics import r2_score\n",
+        "from sklearn.linear_model import LinearRegression\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "!pip install shap\n",
+        "import shap\n",
+        "!pip install lime\n",
+        "import lime\n",
+        "import lime.lime_tabular\n",
+        "from sklearn.linear_model import Ridge, RidgeCV, Lasso\n",
+        "from sklearn.model_selection import cross_val_score\n",
+        "from sklearn.linear_model import Lasso\n",
+        "from sklearn.model_selection import GridSearchCV, cross_val_score\n",
+        "from sklearn.metrics import make_scorer, recall_score, f1_score, precision_score, recall_score\n",
+        "from sklearn.linear_model import ElasticNet\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.tree import DecisionTreeRegressor\n",
+        "from sklearn.ensemble import RandomForestRegressor,AdaBoostRegressor\n",
+        "import xgboost as xgb"
       ],
       "metadata": {
         "id": "M8Vqi-pPk-HR"
@@ -407,7 +416,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# Load Dataset"
+        "# Load Dataset\n",
+        "store_df = pd.read_csv('/content/store.csv')\n",
+        "rossman = pd.read_csv('/content/Rossmann Stores Data.csv')\n"
       ],
       "metadata": {
         "id": "4CkvbW_SlZ_R"
@@ -427,7 +438,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset First Look"
+        "# Dataset First Look\n",
+        "print(rossman.head())\n",
+        "print(store_df.head())"
       ],
       "metadata": {
         "id": "LWNFOSvLl09H"
@@ -447,7 +460,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Rows & Columns count"
+        "# Dataset Rows & Columns count\n",
+        "print(rossman.shape)\n",
+        "print('--------------------------------------')\n",
+        "print(store_df.shape)"
       ],
       "metadata": {
         "id": "Kllu7SJgmLij"
@@ -467,10 +483,22 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Info"
+        "# Dataset Info\n",
+        "rossman.info('all')"
       ],
       "metadata": {
         "id": "e9hRXRi6meOf"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "store_df.info('all')"
+      ],
+      "metadata": {
+        "id": "dFuTE82lhYzX"
       },
       "execution_count": null,
       "outputs": []
@@ -487,7 +515,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Duplicate Value Count"
+        "# Dataset Duplicate Value Count\n",
+        "len(rossman[rossman.duplicated()])\n",
+        "len(store_df[store_df.duplicated()])"
       ],
       "metadata": {
         "id": "1sLdpKYkmox0"
@@ -507,7 +537,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# Missing Values/Null Values Count"
+        "# Missing Values/Null Values Count\n",
+        "print(rossman.isnull().sum())\n",
+        "print('--------------------------------------')\n",
+        "print(store_df.isnull().sum())"
       ],
       "metadata": {
         "id": "GgHWkxvamxVg"
@@ -518,7 +551,11 @@
     {
       "cell_type": "code",
       "source": [
-        "# Visualizing the missing values"
+        "# Visualizing the missing values\n",
+        "plt.figure(figsize=(12, 4))\n",
+        "sns.heatmap(rossman.isnull(), cbar=False,\n",
+        "             cmap='viridis', yticklabels=False)\n",
+        "plt.title('Missing value in the dataset')"
       ],
       "metadata": {
         "id": "3q5wnI3om9sJ"
@@ -538,7 +575,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here"
+        "The dataset given is a dataset from Telecommunication industry, and we have to analysis the churn of customers and the insights behind it.\n",
+        "\n",
+        "Churn prediction is analytical studies on the possibility of a customer abandoning a product or service. The goal is to understand and take steps to change it before the costumer gives up the product or service.\n",
+        "\n",
+        "The above dataset has 3333 rows and 20 columns. There are no mising values and duplicate values in the dataset."
       ],
       "metadata": {
         "id": "gfoNAAC-nUe_"
@@ -567,7 +608,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Describe"
+        "# Dataset Describe\n"
       ],
       "metadata": {
         "id": "DnOaZdaE5Q5t"
@@ -586,9 +627,7 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Answer Here"
-      ],
+      "source": [],
       "metadata": {
         "id": "aJV4KIxSnxay"
       }
@@ -605,7 +644,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Check Unique Values for each variable."
+        "# Check Unique Values for each variable.\n"
       ],
       "metadata": {
         "id": "zms12Yq5n-jE"
