Understand our dataset variables

--- a/Retail_Sales_Predication_ML_project_.ipynb
+++ b/Retail_Sales_Predication_ML_project_.ipynb
@@ -597,7 +597,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Columns"
+        "# Dataset Columns\n",
+        "rossman.columns"
       ],
       "metadata": {
         "id": "j7xfkqrt5Ag5"
@@ -608,7 +609,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Dataset Describe\n"
+        "# Dataset Describe\n",
+        "rossman.describe(include='all')"
       ],
       "metadata": {
         "id": "DnOaZdaE5Q5t"
@@ -627,7 +629,28 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "* State :categorica for the 50 states\n",
+        "* Account Length :how long account has been active\n",
+        "* Area Code :Code Number of Area having some States included in each area code\n",
+        "* lntl Plan :Internat ional plan activated ( yes, no )\n",
+        "* VMail Plan : ice Mail plan activated ( yes ,no )\n",
+        "* VMail Message :No.of voice mail messages\n",
+        "* Day Mins :Total day minutes used\n",
+        "* Day calls :Total day calls made\n",
+        "* Day Charge :Total day charge\n",
+        "* Eve Mins :Total evening minutes\n",
+        "* Eve Calls :Total evening calls\n",
+        "* Eve Charge :Total evening charge\n",
+        "* Night Mins :Total night minutes\n",
+        "* Night Calls :Total night calls\n",
+        "* Night Charge :Total night charge\n",
+        "* Intl Mins :Total International minutes used\n",
+        "* Intl Calls :Total International calls made\n",
+        "* Intl Charge :Total International charge\n",
+        "* CustServ calls :Number of customer service caUs made\n",
+        "* Churn :Customer churn (Target Variable True=1, False=0)"
+      ],
       "metadata": {
         "id": "aJV4KIxSnxay"
       }
@@ -644,7 +667,9 @@
     {
       "cell_type": "code",
       "source": [
-        "# Check Unique Values for each variable.\n"
+        "# Check Unique Values for each variable.\n",
+        "for i in rossman.columns.tolist():\n",
+        "  print(\"No. of unique values in \",i,\"is\",rossman[i].nunique(),\".\")\n"
       ],
       "metadata": {
         "id": "zms12Yq5n-jE"
