Done Hypothesis Testing

--- a/Retail_Sales_Predication_ML_project_.ipynb
+++ b/Retail_Sales_Predication_ML_project_.ipynb
@@ -710,8 +710,7 @@
         "merged_df['CompetitionOpenSinceYear']=merged_df['CompetitionOpenSinceYear'].astype(int)\n",
         "merged_df['Promo2SinceYear']=merged_df['Promo2SinceYear'].astype(int)\n",
         "merged_df['CompetitionDistance']=merged_df['CompetitionDistance'].astype(int)\n",
-        "merged_df['Promo2SinceWeek']=merged_df['Promo2SinceWeek'].astype(int)\n",
-        ""
+        "merged_df['Promo2SinceWeek']=merged_df['Promo2SinceWeek'].astype(int)\n"
       ],
       "metadata": {
         "id": "nENG97-cTqcH"
@@ -2055,7 +2054,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "Hypothetical Statement 1: Stores with promotions (Promo) have higher sales on average compared to stores without promotions.\n",
+        "\n",
+        "Hypothetical Statement 2: Sales vary significantly among different store types (StoreType).\n",
+        "\n",
+        "Hypothetical Statement 3: There is a difference in sales on weekdays (DayOfWeek) compared to weekends."
       ],
       "metadata": {
         "id": "-7MS06SUHkB-"
@@ -2082,7 +2085,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "Null Hypothesis (H0): There is no significant difference in the average sales between stores with promotions (Promo = 1) and stores without promotions (Promo = 0)\n",
+        "\n",
+        "Alternative Hypothesis (H1): Stores with promotions (Promo = 1) have a significantly higher average sales compared to stores without promotions (Promo = 0)."
       ],
       "metadata": {
         "id": "HI9ZP0laH0D-"
@@ -2100,10 +2105,69 @@
     {
       "cell_type": "code",
       "source": [
-        "# Perform Statistical Test to obtain P-Value"
+        "# Separate data into two group base on Promo(1 or 0)\n",
+        "from scipy.stats import levene\n",
+        "from scipy.stats import shapiro\n",
+        "Promo_group = merged_df[merged_df['Promo'] == 1]['Sales']\n",
+        "No_Promo_group = merged_df[merged_df['Promo'] == 0]['Sales']\n",
+        "# Before performing a two-sample t-test, it's important to check the assumptions associated with this test to ensure its validity.\n",
+        "# 1. Normality, Independents varible, Equal variance(Homogeneity of variance)\n",
+        "# check Assumption Normality use Shapiro-Wilk test\n",
+        "# Check assumption for Normality\n",
+        "statices, p_value = shapiro(Promo_group)\n",
+        "if p_value > 0.05:\n",
+        "    print(\"promo group appare to be Normally distributed\")\n",
+        "else:\n",
+        "    print('promo group does not appear to be normally distributed')\n",
+        "\n",
+        "\n",
+        "# 20 Equal variance(Homogeneity of variance\n",
+        "\n",
+        "# Check homogeneity of variance\n",
+        "statistic, p_value = levene(Promo_group, No_Promo_group)\n",
+        "if p_value > 0.05:\n",
+        "    print(\"Variances are approximately equal (homogeneous).\")\n",
+        "else:\n",
+        "    print(\"Variances are not equal (heterogeneous).\")"
       ],
       "metadata": {
         "id": "oZrfquKtyian"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Both Assumptions are Failed we did not use Two sample t-test\n",
+        "Now try Mann whitney u-test"
+      ],
+      "metadata": {
+        "id": "eGQFotS1nEW0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Perform the Mann-Whitney U-test\n",
+        "from scipy import stats\n",
+        "statistic, p_value = stats.mannwhitneyu(\n",
+        "    Promo_group, No_Promo_group, alternative=\"two-sided\")\n",
+        "# Print the test statistic and p-value\n",
+        "print(\"Mann-Whitney U-Statistic:\", statistic)\n",
+        "print(\"p-value:\", p_value)\n",
+        "\n",
+        "# Set the significance level (alpha)\n",
+        "alpha = 0.05\n",
+        "\n",
+        "# Draw a conclusion based on the p-value\n",
+        "if p_value < alpha:\n",
+        "    print(\"Reject the null hypothesis. There is a significant difference between the groups.\")\n",
+        "else:\n",
+        "    print(\"Fail to reject the null hypothesis. There is no significant difference between the groups.\")"
+      ],
+      "metadata": {
+        "id": "5q3kYm7AnKje"
       },
       "execution_count": null,
       "outputs": []
@@ -2120,7 +2184,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "*The statistical test that was performed to obtain the p-value in the context of your question is the Mann-Whitney U-test (also known as the Wilcoxon rank-sum test)*"
       ],
       "metadata": {
         "id": "s2U0kk00ygSB"
@@ -2138,7 +2202,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "*the Mann-Whitney U-test was a suitable choice to test whether there is a significant difference in sales between stores with and without promotions. It allows for a robust comparison of the two groups without relying on assumptions that may not hold in this scenario, such as the assumption of normality or equal variances.*"
       ],
       "metadata": {
         "id": "HO4K0gP5y3B4"
@@ -2165,7 +2229,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "*Null Hypothesis (H0): There is no significant difference in sales among different store types.*\n",
+        "\n",
+        "*Alternative Hypothesis (H1): Sales vary significantly among different store types.*"
       ],
       "metadata": {
         "id": "FnpLGJ-4pUZe"
@@ -2183,7 +2249,51 @@
     {
       "cell_type": "code",
       "source": [
-        "# Perform Statistical Test to obtain P-Value"
+        "merged_df"
+      ],
+      "metadata": {
+        "id": "sFGLixXtosu7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from scipy.stats import kruskal\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "\n",
+        "# Perform the Kruskal-Wallis H-test\n",
+        "result = kruskal(\n",
+        "    merged_df['Sales'][merged_df['StoreType'] == 0],\n",
+        "    merged_df['Sales'][merged_df['StoreType'] == 1],\n",
+        "    merged_df['Sales'][merged_df['StoreType'] == 2],\n",
+        "    merged_df['Sales'][merged_df['StoreType'] == 3]\n",
+        ")\n",
+        "\n",
+        "# Check assumption 4: Homogeneity of Variance (Visual inspection)\n",
+        "plt.figure(figsize=(8, 6))\n",
+        "sns.boxplot(x=merged_df['StoreType'], y=merged_df['Sales'])\n",
+        "plt.title(\"Boxplot of Sales for Different Store Types\")\n",
+        "plt.xlabel(\"Store Types\")\n",
+        "plt.ylabel(\"Sales\")\n",
+        "plt.show()\n",
+        "\n",
+        "# Extract the p-value from the result\n",
+        "p_value = result.pvalue\n",
+        "\n",
+        "# Set the significance level (alpha)\n",
+        "alpha = 0.05\n",
+        "\n",
+        "# Print the results\n",
+        "print(\"Kruskal-Wallis H-test p-value:\", p_value)\n",
+        "\n",
+        "# Draw a conclusion based on the p-value\n",
+        "if p_value < alpha:\n",
+        "    print(\"Reject the null hypothesis. Sales vary significantly among different store types.\")\n",
+        "else:\n",
+        "    print(\"Fail to reject the null hypothesis. There is no significant difference in sales among different store types.\")\n"
       ],
       "metadata": {
         "id": "sWxdNTXNpUZe"
@@ -2203,7 +2313,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "Kruskal-Wallis H-test -> the statistical test used to obtain the p-value for the hypothesis test (e.g., comparing sales among different store types)"
       ],
       "metadata": {
         "id": "oLDrPz7HpUZf"
@@ -2221,7 +2331,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "Kruskal-Wallis H-test was chosen because it aligns well with the characteristics of the data and the research question, while also being robust to potential violations of normality and homogeneity of variances"
       ],
       "metadata": {
         "id": "4xOGYyiBpUZf"
@@ -2248,7 +2358,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "Null Hypothesis (H0): There is no significant difference in sales between weekdays (DayOfWeek = 1 to 5) and weekends (DayOfWeek = 6 or 7).\n",
+        "\n",
+        "*Alternative Hypothesis (H1): There is a significant difference in sales between weekdays and weekends."
       ],
       "metadata": {
         "id": "7gWI5rT9pZyH"
@@ -2266,7 +2378,48 @@
     {
       "cell_type": "code",
       "source": [
-        "# Perform Statistical Test to obtain P-Value"
+        "# Perform Statistical Test to obtain P-Value\n",
+        "# Separate the data into two groups: weekdays and weekends\n",
+        "weekdays_sales = merged_df[merged_df['DayOfWeek'].isin([1, 2, 3, 4, 5])]['Sales']\n",
+        "weekends_sales = merged_df[merged_df['DayOfWeek'].isin([6, 7])]['Sales']\n",
+        "\n",
+        "# Check Assumption 1: Independent Samples (Already assumed)\n",
+        "# Check Assumption 2: Random Sampling (Assumed)\n",
+        "\n",
+        "# Check Assumption 3: Data Type (Assumed to be interval or ratio)\n",
+        "\n",
+        "# Check Assumption 4: Homogeneity of Variance (Visual inspection)\n",
+        "plt.figure(figsize=(8, 6))\n",
+        "sns.boxplot(x='DayOfWeek', y='Sales', data=df)\n",
+        "plt.title(\"Boxplot of Sales by DayOfWeek\")\n",
+        "plt.xlabel(\"DayOfWeek\")\n",
+        "plt.ylabel(\"Sales\")\n",
+        "plt.show()\n",
+        "\n",
+        "# Check Assumption 5: Sample Size (No specific test, just ensure reasonable sample sizes)\n",
+        "\n",
+        "# Perform the statistical test\n",
+        "alpha = 0.05  # Set the significance level\n",
+        "\n",
+        "# Check if variances are equal (Levene's test)\n",
+        "statistic, p_levene = stats.levene(weekdays_sales, weekends_sales)\n",
+        "\n",
+        "if p_levene < alpha:\n",
+        "    # Variances are not equal, use Mann-Whitney U-test (non-parametric)\n",
+        "    statistic, p_value = stats.mannwhitneyu(\n",
+        "        weekdays_sales, weekends_sales, alternative='two-sided')\n",
+        "else:\n",
+        "    # Variances are equal, use two-sample t-test (parametric)\n",
+        "    statistic, p_value = stats.ttest_ind(weekdays_sales, weekends_sales)\n",
+        "\n",
+        "# Print the p-value\n",
+        "print(\"P-Value:\", p_value)\n",
+        "\n",
+        "# Draw a conclusion based on the p-value\n",
+        "if p_value < alpha:\n",
+        "    print(\"Reject the null hypothesis. There is a significant difference in sales between weekdays and weekends.\")\n",
+        "else:\n",
+        "    print(\"Fail to reject the null hypothesis. No significant difference in sales between weekdays and weekends.\")"
       ],
       "metadata": {
         "id": "s6AnJQjtpZyI"
@@ -2286,7 +2439,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "To obtain the p-value compares sales between weekdays and weekends, I  performs either a Mann-Whitney U-test or a two-sample t-test, depending on whether the assumption of equal variances is met"
       ],
       "metadata": {
         "id": "ytWJ8v15pZyI"
@@ -2304,7 +2457,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "The choice of the specific statistical test is made to ensure the validity of the hypothesis test while taking into account the characteristics of the data and the assumption of equal variances. This approach helps obtain accurate and meaningful results from the hypothesis test."
       ],
       "metadata": {
         "id": "M99G98V6pZyI"
