Handing missing values and outliers past complate

--- a/Retail_Sales_Predication_ML_project_.ipynb
+++ b/Retail_Sales_Predication_ML_project_.ipynb
@@ -2473,6 +2473,41 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(figsize=(15,8))\n",
+        "correlation=merged_df.corr()\n",
+        "sns.heatmap(abs(correlation),annot=True,cmap='Reds',linewidths=2,fmt=\".2f\")"
+      ],
+      "metadata": {
+        "id": "fNhqGqzzEGnk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df=merged_df.copy()"
+      ],
+      "metadata": {
+        "id": "BVl8X5MVEGkE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df.shape"
+      ],
+      "metadata": {
+        "id": "wILQEzJuELSb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "### 1. Handling Missing Values"
@@ -2484,7 +2519,11 @@
     {
       "cell_type": "code",
       "source": [
-        "# Handling Missing Values & Missing Value Imputation"
+        "# Handling Missing Values & Missing Value Imputation\n",
+        "# Missing Values/Null Values Count\n",
+        "print(df.isnull().sum())\n",
+        "# Checking Null Value by plotting Heatmap\n",
+        "sns.heatmap(df.isnull(), cbar=False)"
       ],
       "metadata": {
         "id": "iRsAHk1K0fpS"
@@ -2504,7 +2543,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "No missing values"
       ],
       "metadata": {
         "id": "1ixusLtI0pqI"
@@ -2522,7 +2561,25 @@
     {
       "cell_type": "code",
       "source": [
-        "# Handling Outliers & Outlier treatments"
+        "# Handling Outliers & Outlier treatments\n",
+        "# In this example, we will use the box plot to identify the outliers for the 'Sales' variable\n",
+        "\n",
+        "sns.boxplot(x='Sales', data=merged_df)\n",
+        "\n",
+        "# Decide on the outlier treatment strategy\n",
+        "\n",
+        "# In this example, we will winsorize the outliers for the 'Sales' variable\n",
+        "\n",
+        "merged_df['Sales']=winsorize(merged_df['Sales'], limits=[0.05, 0.05])\n",
+        "\n",
+        "# Alternatively, you can remove the outliers for the 'Sales' variable\n",
+        "\n",
+        "q1= merged_df['Sales'].quantile(0.25)\n",
+        "q3= merged_df['Sales'].quantile(0.75)\n",
+        "\n",
+        "iqr = q3 - q1\n",
+        "\n",
+        "df = merged_df[(merged_df['Sales'] >= q1-1.5*iqr) & (merged_df['Sales'] <= q3 + 1.5*iqr)]"
       ],
       "metadata": {
         "id": "M6w2CzZf04JK"
@@ -2542,7 +2599,21 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "Handling outliers is another important step in feature engineering and data pre processing for the Rossmann sales prediction project. Outliers are data points that are significantly different from the other data points in the dataset and can have a significant impact on the predictive model.\n",
+        "\n",
+        "Here are some steps for handling outliers and performing outlier treatments in the feature engineering and data pre-processing of data.\n",
+        "\n",
+        "1. Identify the outliers: The first step is to identify the outliers in the dataset. You can use visualization tools such as box plots, scatter plots, or histograms to identify the outliers.\n",
+        "\n",
+        "2. Decide on the outlier treatment strategy: There are several strategies for treating outliers, such as removing the outliers, winsorizing the outliers, or transforming the variables using logarithmic or square root transformations.\n",
+        "\n",
+        "3. Implement the outlier treatment strategy: Once you have decided on the outlier treatment strategy, you can use Python libraries such as numpy, scipy, or sklearn to implement the outlier treatment.\n",
+        "\n",
+        "In the above example, we first loaded the dataset and used a box plot to identify the outliers for the 'Sales' variable. We then decided to winsorize the outliers for the 'Sales' variable using the winsorize() function from the scipy.stats.mstats module. We also showed an alternative method of removing the outliers using the interquartile range (IQR) method.\n",
+        "\n",
+        "In the above example, we first loaded the dataset and used a box plot to identify the outliers for the 'Sales' variable. We then decided to winsorize the outliers for the 'Sales' variable using the winsorize() function from the scipy.stats.mstats module. We also showed an alternative method of removing the outliers using the interquartile range (IQR) method.\n",
+        "\n",
+        "It's important to note that outlier treatment should be performed with caution, as removing or transforming the outliers can also impact the predictive power of the model. It's always a good practice to explore and understand the nature of the outliers and the impact of the outlier treatment on the overall model performance."
       ],
       "metadata": {
         "id": "uGZz5OrT1HH-"
@@ -2560,7 +2631,18 @@
     {
       "cell_type": "code",
       "source": [
-        "# Encode your categorical columns"
+        "# Encode your categorical columns\n",
+        "# One-Hot Encoding\n",
+        "\n",
+        "# In this example, we will one hot encode the 'StateHoliday' column\n",
+        "\n",
+        "df = pd.get_dummies (merged_df, columns=['StateHoliday'])\n",
+        "\n",
+        "# Alternatively, you can use the LabelEncoder from scikit-learn to perform label encoding\n",
+        "\n",
+        "le = LabelEncoder()\n",
+        "\n",
+        "df['StateHoliday'] = le.fit_transform(merged_df['StateHoliday'])"
       ],
       "metadata": {
         "id": "21JmIYMG2hEo"
@@ -2580,7 +2662,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Answer Here."
+        "Encoding categorical columns is an important step in feature engineering and data pre-processing for the data. Categorical columns contain values that are not numerical and cannot be used directly in predictive models. Therefore, we need to convert these categorical variables into numerical variables using encoding techniques.\n",
+        "\n",
+        "Here are some common encoding techniques used for categorical variables:\n",
+        "\n",
+        "1. Label Encoding: This is a simple technique where each category is assigned a unique numerical label. However, this technique can be problematic when the categories have no inherent order, as the numerical labels can introduce an unintended order to the categories.\n",
+        "\n",
+        "2. One-Hot Encoding: This technique creates a binary column for each category, indicating whether or not a data point belongs to that category. This technique is useful when the categories have no inherent order and when the number of categories is not too large.\n",
+        "\n",
+        "3. Binary Encoding: This technique creates binary codes for each category, where each digit represents a power of 2. This technique is useful when the number of categories is large.\n",
+        "\n",
+        "In the above code, we loaded the dataset and used one-hot encoding to convert the 'StateHoliday' column into numerical columns using the get dummies() function from the pandas module. We also showed an alternative method of label encoding using the LabelEncoder from the sklearn.preprocessing module.\n",
+        "\n",
+        "It's important to note that the encoding technique used should depend on the nature of the categorical varial and the specific requirements of the predictive model. It's always a good practice to explore and understand the nature of the categorical variables and the impact of the encoding technique on the overall model performance."
       ],
       "metadata": {
         "id": "UDaue5h32n_G"
